[IMP] Get access by user id
