# chapter_viii/overlord.js/src/routes.js
@@ -2,4 +2,5 @@ exports.authentication = require('./authentication/routes')
 exports.user = require('./user/routes')
 exports.role = require('./role/routes')
 exports.module = require('./module/routes')
+exports.access = require('./access/routes')
 exports.version = require('./version/routes')
